# corporate-assistant

./: Cargo.toml  README.md  build-linux.sh  run-dbg-linux.sh  run-linux-release.sh  run-linux.sh  run-test-ignored-linux.sh  run-test-linux.sh  run_tests_linux.sh
.github/workflows/: building.yaml
corporate-assistant/: Cargo.toml  config.toml  email_client.toml  email_client_empty.toml
corporate-assistant/src/: ca.rs  config.rs  jira.rs  labeling_assistant.rs  lib.rs  main.rs  msr.rs  nlu.rs  skm.rs  speaker.rs  webbrowser.rs
custom_action/: Cargo.toml
custom_action/scripts/: custom_script.sh
custom_action/src/: lib.rs  main.rs
doc/design/: configuration.md  custom_action.md  nlu.md  webbrowser.md
doc/design/images/: configuration.dot
err_handling/: Cargo.toml
err_handling/src/: lib.rs  main.rs
examplery_custom_scripts/linux/: custom_actions.toml
github-crawler/: Cargo.toml
github-crawler/src/: config_parser.rs  github_prs_query.graphql  lib.rs  main.rs
mailer/: Cargo.toml
mailer/src/: lib.rs  main.rs
record/: Cargo.toml  README.md
record/src/: lib.rs  main.rs
scripts/: compare_to_release.sh  ds.py  infer.sh  mic_vad_streaming.py  record-all.sh  record-dev.sh  record-test.sh  record.sh  render_training.sh  test-auth.sh  test-issues.sh  test-skm.sh  test-sprint.sh  test-webmail.sh  test.sh  validate-csv.sh
