[package]
name = "corporate-assistant"
version = "0.1.0"
authors = ["Jacek Czaja <jacek.czaja@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audrey = "0.3.0"
deepspeech = "0.9.0"
clap = "~2.27.0"
record = { path = "../record" }
github-crawler = { path = "../github-crawler" }
tts = "0.15.2"
chrono = "0.4"
