[package]
name = "corporate-assistant"
version = "0.1.0"
authors = ["Jacek Czaja <jacek.czaja@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audrey = "0.3.0"
deepspeech = "0.9.0"
clap = "~2.27.0"
record = { path = "../record" }
err_handling = { path = "../err_handling" }
github-crawler = { path = "../github-crawler" }
custom_action = { path = "../custom_action" }
mailer = { path = "../mailer" }
tts = "0.22.4"
chrono = "0.4"
fltk = { version = "^1", features = ["fltk-bundled"] }
dirs = "3.0.2"
webbrowser = "0.5.5"
toml = "0.5.7"
serde = "^1.0"
regex = "1.3.3"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
futures = "0.3"
syslog = "6.0.1"
log = "0.4.0"
num-traits = "0.2.14"
