[package]
name = "custom_action"
version = "0.1.0"
authors = ["Jacek Czaja <jacek.czaja@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1", features = ["fltk-bundled"] }
toml = "0.5.7"
serde = "^1.0"
record = { path = "../record" }
deepspeech = "0.9.0"
err_handling = { path = "../err_handling" }
log = "0.4.0"
