[package]
name = "github-crawler"
version = "0.1.0"
authors = ["Tomasz Patejko <tomasz.patejko@intel.com>", "Jacek Czaja <jacek.czaja@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
graphql_client = "0.9.0"
serde = "^1.0"
reqwest = "^0.9"
prettytable-rs = "^0.7"
structopt = "^0.2.18"
dotenv = "^0.13"
envy = "^0.3"
log = "^0.4"
env_logger = "^0.5"
chrono = "0.4"
toml = "0.5.7"
openssl = { version = "0.10", features = ["vendored"] }

