[package]
name = "mailer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1", features = ["full"] }
tokio = { version = "^1.0", features = ["full"] }
lettre = "0.10.0-rc.4"
native-tls = "0.2.7"
