[package]
name = "record"
version = "0.1.0"
authors = ["Jacek Czaja <jacek.czaja@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav = "0.5.0"
sdl2 = "0.34.0"
rand = "0.6.0"
chrono = "0.4.19"
structopt = "0.2.18"
err_handling = { path = "../err_handling" }
log = "^0.4"
